src/plugins/android/androidconfigurations.h
@@ -208,7 +208,8 @@ public:
     static AndroidConfigurations *instance();
 
     static void updateAndroidDevice();
-    static AndroidDeviceInfo showDeviceDialog(ProjectExplorer::Project *project, int apiLevel, const QString &abi);
+    enum Options { None, FilterAndroid5 };
+    static AndroidDeviceInfo showDeviceDialog(ProjectExplorer::Project *project, int apiLevel, const QString &abi, Options options);
     static void setDefaultDevice(ProjectExplorer::Project *project, const QString &abi, const QString &serialNumber); // serial number or avd name
     static QString defaultDevice(ProjectExplorer::Project *project, const QString &abi); // serial number or avd name
 public slots:
