src/plugins/android/androiddeployqtstep.cpp
@@ -176,8 +176,19 @@ bool AndroidDeployQtStep::init()
         emit addOutput(tr("No Android arch set by the .pro file."), ErrorOutput);
         return false;
     }
+
+    AndroidBuildApkStep *androidBuildApkStep
+        = AndroidGlobal::buildStep<AndroidBuildApkStep>(target()->activeBuildConfiguration());
+    if (!androidBuildApkStep) {
+        emit addOutput(tr("Cannot find the android build step."), ErrorOutput);
+        return false;
+    }
+
     m_deviceAPILevel = AndroidManager::minimumSDK(target());
-    AndroidDeviceInfo info = AndroidConfigurations::showDeviceDialog(project(), m_deviceAPILevel, m_targetArch);
+    AndroidConfigurations::Options options = AndroidConfigurations::None;
+    if (androidBuildApkStep->deployAction() == AndroidBuildApkStep::DebugDeployment)
+        options = AndroidConfigurations::FilterAndroid5;
+    AndroidDeviceInfo info = AndroidConfigurations::showDeviceDialog(project(), m_deviceAPILevel, m_targetArch, options);
     if (info.serialNumber.isEmpty()) // aborted
         return false;
 
@@ -205,12 +216,6 @@ bool AndroidDeployQtStep::init()
     ProjectExplorer::ProcessParameters *pp = processParameters();
     m_useAndroiddeployqt = version->qtVersion() >= QtSupport::QtVersionNumber(5, 4, 0);
     if (m_useAndroiddeployqt) {
-        AndroidBuildApkStep *androidBuildApkStep
-            = AndroidGlobal::buildStep<AndroidBuildApkStep>(target()->activeBuildConfiguration());
-        if (!androidBuildApkStep) {
-            emit addOutput(tr("Cannot find the android build step."), ErrorOutput);
-            return false;
-        }
         Utils::FileName tmp = AndroidManager::androidQtSupport(target())->androiddeployqtPath(target());
         if (tmp.isEmpty()) {
             emit addOutput(tr("Cannot find the androiddeployqt tool."), ErrorOutput);
